src/parser.leg
%{
#include "lidija.h"
int l_stackp = 0;
%}

body       = (
             e:lexpr                               { if(e) L_ADD_NODE(e); }
             )+ eof
           | lexpr* bad eof

bad        = < .+ >                                { L_ADD_NODE(l_create_err_node(yytos(yytext, yyleng))); }

lexpr      = -* (
             empty-line
           | comment
           | icall
           | assign
           | expr
             ) -* --?

assign     = (name:identifier | name:symbol) -+
             "=" -+
             (val:icall | val:expr)                { $$ = l_create_assign_node(name, val); }

icall      = name:identifier                       { l_stack_push(); }
             (
             arg-sep arg:expr                      { l_stack_add(arg); }
             )+                                    { int count = l_stack_count[l_stackp];
                                                     $$ = l_create_call_node(name, count, l_stack_pop()); }

ecall      = "(" name:identifier                   { l_stack_push(); }
             (
             arg-sep arg:expr                      { l_stack_add(arg); }
             )* ")"                                { int count = l_stack_count[l_stackp];
                                                     $$ = l_create_call_node(name, count, l_stack_pop()); }

arg-sep    = "," (- | --)* | -+

expr       = op
           | eop
           | ecall
           | func
           | list
           | atom

func       = args:func-args
             "{" (- | --)*                         { l_stack_push(); }
             (
             e:lexpr                               { if(e) l_stack_add(e); }
             )+
             -* "}"                                { int count = l_stack_count[l_stackp];
                                                     $$ = l_create_func_node(args, count, l_stack_pop()); }

func-args  = "["                                   { l_stack_push(); }
             ( -*
             arg:identifier                        { l_stack_add(l_create_var_node(arg)); }
             )+ -*
             "]" -*                                { int count = l_stack_count[l_stackp];
                                                     $$ = l_create_list_node(count, l_stack_pop()); }
           | &"{"                                  { $$ = l_create_list_node(0, NULL); }

op         = left:operand -+
             symbol:symbol -+
             right:operand                         { LNode **args = malloc(sizeof(LNode*) * 2);
                                                     args[0] = left;
                                                     args[1] = right;
                                                     $$ = l_create_call_node(symbol, 2, args); }

eop        = "(" op ")"

operand    = list
           | atom
           | eop
           | ecall

atom       = var
           | string
           | range
           | integer

list-sep   = - | -- | ","

list       = "[" -*                                { l_stack_push(); }
             (
             e:expr list-sep*                      { l_stack_add(e); }
             )*
             "]"                                   { int count = l_stack_count[l_stackp];
                                                     $$ = l_create_list_node(count, l_stack_pop()); }

rangeop    = var
           | integer
           | eop
           | ecall

range      = first:rangeop ".." last:rangeop       { $$ = l_create_rng_node(first, last); }

var        = name:identifier                       { $$ = l_create_var_node(name); }

dq         = "\""
sq         = "\'"
ndq        = !dq .
nsq        = !sq .
esc        = "\\" .
string     = dq < (esc | ndq)* > dq                { $$ = l_create_str_node(yytext, yyleng); }
           | sq < (esc | nsq)* > sq                { $$ = l_create_str_node(yytext, yyleng); }

empty-line = -* --                                 { $$ = 0; }
comment    = -* '#' [^\r\n]* --?                   { $$ = 0; }

symbol     = < [-~`!?@$%^&*_+|/,.<>]+ >            { $$ = yytos(yytext, yyleng); }
           | < [-~`!?@$%^&*_+|/,.<>=]
               [-~`!?@$%^&*_+|/,.<>=]+ >           { $$ = yytos(yytext, yyleng); }

identifier = < [a-z] [a-z0-9-]* >                  { $$ = yytos(yytext, yyleng); }

integer    = < digit+ >                            { $$ = l_create_int_node(yytext, yyleng); }

digit      = [0-9]

-          = [ \t]
--         = [\r]? [\n]
eof        = !.

%%

void l_stack_push() {
  if(++l_stackp == STACK_LEN) exit(1);
  l_stack_count[l_stackp] = 0;
}

void l_stack_add(LNode *n) {
  l_stack[l_stackp][l_stack_count[l_stackp]++] = n;
}

LNode **l_stack_pop() {
  int i;
  LNode **args = malloc(sizeof(LNode*) * l_stack_count[l_stackp]);
  for(i=0; i<l_stack_count[l_stackp]; i++) args[i] = l_stack[l_stackp][i];
  l_stackp--;
  return args;
}

char *yytos(char *yytext, int yyleng) {
  char *s = malloc(sizeof(char) * (yyleng + 1));
  strcpy(s, "");
  strncat(s, yytext, yyleng);
  return s;
}

LNode *l_create_int_node(char *yytext, int yyleng) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_NUM_TYPE;
  n->value.num = atoi(yytext);
  return n;
}

LNode *l_create_str_node(char *yytext, int yyleng) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_STR_TYPE;
  n->value.str = malloc(sizeof(char) * (yyleng + 1));
  strcpy(n->value.str, "");
  strncat(n->value.str, yytext, yyleng);
  return n;
}

LNode *l_create_rng_node(LNode *first, LNode *last) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_RANGE_TYPE;
  n->value.range.first = first;
  n->value.range.last = last;
  return n;
}

LNode *l_create_var_node(char *name) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_VAR_TYPE;
  n->value.var = name;
  return n;
}

LNode *l_create_assign_node(char *name, LNode *expr) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_ASSIGN_TYPE;
  n->value.assign.name = name;
  n->value.assign.expr = expr;
  return n;
}

LNode *l_create_call_node(char *name, int argc, LNode **args) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_CALL_TYPE;
  n->value.call.name = name;
  n->value.call.argc = argc;
  n->value.call.args = args;
  return n;
}

LNode *l_create_list_node(int itemc, LNode **items) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_LIST_TYPE;
  n->value.list.count = itemc;
  n->value.list.items = items;
  return n;
}

LNode *l_create_func_node(LNode *args, int exprc, LNode **exprs) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_FUNC_TYPE;
  n->value.func.args = args;
  n->value.func.exprc = exprc;
  n->value.func.exprs = exprs;
  return n;
}

LNode *l_create_err_node(char *error) {
  LNode *n = malloc(sizeof(LNode));
  n->type = L_ERR_TYPE;
  n->value.err = error;
  return n;
}

// borrowed from O'Reilly book "lex & yacc" pg. 157
int yy_input(char *buf, int max_size) {
  int len = strlen(yy_input_ptr);
  int n = max_size < len ? max_size : len;
  if(n > 0) {
    memcpy(buf, yy_input_ptr, n);
    yy_input_ptr += n;
  }
  return n;
}

LAst *l_parse(char *source) {
  L_AST = NULL;
  yy_input_ptr = source;
  yy_input_len = strlen(yy_input_ptr);
  while (yyparse());
  return L_AST;
}
