ext/parser.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 33


#include "ruby.h"
RUBY_GLOBAL_SETUP;

FILE *source_file;

int yy_input(char *buf, int max_size);

#define YY_INPUT(b, r, ms) (r = yy_input(b, ms))

#define YYSTYPE volatile VALUE

VALUE parser; /* ruby obj */
VALUE stack; /* ruby array */

#define SPUSH() \
  rb_ary_push(stack, rb_ary_new())

#define SADD(val) \
  rb_ary_push(rb_ary_entry(stack, RARRAY_LEN(stack) - 1), val)

#define SPOP() \
  rb_ary_pop(stack)

#define P_NEW(n, v)           rb_funcall(parser, rb_intern(n), 1, v)
#define P_NEW2(n, v1, v2)     rb_funcall(parser, rb_intern(n), 2, v1, v2)
#define P_NEW3(n, v1, v2, v3) rb_funcall(parser, rb_intern(n), 3, v1, v2, v3)
#define P_ADD(ast)            rb_funcall(parser, rb_intern("add"), 1, ast)


#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_digit(); /* 33 */
YY_RULE(int) yy_esc(); /* 32 */
YY_RULE(int) yy_nsq(); /* 31 */
YY_RULE(int) yy_ndq(); /* 30 */
YY_RULE(int) yy_sq(); /* 29 */
YY_RULE(int) yy_dq(); /* 28 */
YY_RULE(int) yy_rangeop(); /* 27 */
YY_RULE(int) yy_integer(); /* 26 */
YY_RULE(int) yy_range(); /* 25 */
YY_RULE(int) yy_string(); /* 24 */
YY_RULE(int) yy_var(); /* 23 */
YY_RULE(int) yy_operand(); /* 22 */
YY_RULE(int) yy_func_args(); /* 21 */
YY_RULE(int) yy_atom(); /* 20 */
YY_RULE(int) yy_list(); /* 19 */
YY_RULE(int) yy_func(); /* 18 */
YY_RULE(int) yy_eop(); /* 17 */
YY_RULE(int) yy_op(); /* 16 */
YY_RULE(int) yy_ecall(); /* 15 */
YY_RULE(int) yy_arg_sep(); /* 14 */
YY_RULE(int) yy_symbol(); /* 13 */
YY_RULE(int) yy_identifier(); /* 12 */
YY_RULE(int) yy___(); /* 11 */
YY_RULE(int) yy_expr(); /* 10 */
YY_RULE(int) yy_assign(); /* 9 */
YY_RULE(int) yy_icall(); /* 8 */
YY_RULE(int) yy_comment(); /* 7 */
YY_RULE(int) yy_empty_line(); /* 6 */
YY_RULE(int) yy__(); /* 5 */
YY_RULE(int) yy_bad(); /* 4 */
YY_RULE(int) yy_eof(); /* 3 */
YY_RULE(int) yy_lexpr(); /* 2 */
YY_RULE(int) yy_body(); /* 1 */

YY_ACTION(void) yy_1_integer(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_integer\n"));
   yy = P_NEW("integer", rb_str_new(yytext, yyleng)); ;
}
YY_ACTION(void) yy_1_identifier(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_identifier\n"));
   yy = rb_str_new(yytext, yyleng); ;
}
YY_ACTION(void) yy_2_symbol(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_symbol\n"));
   yy = rb_str_new(yytext, yyleng); ;
}
YY_ACTION(void) yy_1_symbol(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_symbol\n"));
   yy = rb_str_new(yytext, yyleng); ;
}
YY_ACTION(void) yy_1_comment(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_comment\n"));
   yy = 0; ;
}
YY_ACTION(void) yy_1_empty_line(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_empty_line\n"));
   yy = 0; ;
}
YY_ACTION(void) yy_2_string(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_string\n"));
   yy = rb_str_new(yytext, yyleng); ;
}
YY_ACTION(void) yy_1_string(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_string\n"));
   yy = rb_str_new(yytext, yyleng); ;
}
YY_ACTION(void) yy_1_var(char *yytext, int yyleng)
{
#define name yyval[-1]
  yyprintf((stderr, "do yy_1_var\n"));
   yy = P_NEW("var", name); ;
#undef name
}
YY_ACTION(void) yy_1_range(char *yytext, int yyleng)
{
#define last yyval[-1]
#define first yyval[-2]
  yyprintf((stderr, "do yy_1_range\n"));
   yy = P_NEW2("range", first, last); ;
#undef last
#undef first
}
YY_ACTION(void) yy_3_list(char *yytext, int yyleng)
{
#define e yyval[-1]
  yyprintf((stderr, "do yy_3_list\n"));
   yy = P_NEW("list", SPOP()); ;
#undef e
}
YY_ACTION(void) yy_2_list(char *yytext, int yyleng)
{
#define e yyval[-1]
  yyprintf((stderr, "do yy_2_list\n"));
   SADD(e); ;
#undef e
}
YY_ACTION(void) yy_1_list(char *yytext, int yyleng)
{
#define e yyval[-1]
  yyprintf((stderr, "do yy_1_list\n"));
   SPUSH(); ;
#undef e
}
YY_ACTION(void) yy_1_atom(char *yytext, int yyleng)
{
#define str yyval[-1]
  yyprintf((stderr, "do yy_1_atom\n"));
   yy = P_NEW("string", str); ;
#undef str
}
YY_ACTION(void) yy_1_op(char *yytext, int yyleng)
{
#define right yyval[-1]
#define symbol yyval[-2]
#define left yyval[-3]
  yyprintf((stderr, "do yy_1_op\n"));
   yy = P_NEW3("op", symbol, left, right); ;
#undef right
#undef symbol
#undef left
}
YY_ACTION(void) yy_4_func_args(char *yytext, int yyleng)
{
#define arg yyval[-1]
  yyprintf((stderr, "do yy_4_func_args\n"));
   yy = 0; ;
#undef arg
}
YY_ACTION(void) yy_3_func_args(char *yytext, int yyleng)
{
#define arg yyval[-1]
  yyprintf((stderr, "do yy_3_func_args\n"));
   yy = SPOP(); ;
#undef arg
}
YY_ACTION(void) yy_2_func_args(char *yytext, int yyleng)
{
#define arg yyval[-1]
  yyprintf((stderr, "do yy_2_func_args\n"));
   SADD(arg); ;
#undef arg
}
YY_ACTION(void) yy_1_func_args(char *yytext, int yyleng)
{
#define arg yyval[-1]
  yyprintf((stderr, "do yy_1_func_args\n"));
   SPUSH(); ;
#undef arg
}
YY_ACTION(void) yy_3_func(char *yytext, int yyleng)
{
#define e yyval[-1]
#define args yyval[-2]
  yyprintf((stderr, "do yy_3_func\n"));
   yy = P_NEW2("func", args ? args : rb_ary_new(), SPOP()); ;
#undef e
#undef args
}
YY_ACTION(void) yy_2_func(char *yytext, int yyleng)
{
#define e yyval[-1]
#define args yyval[-2]
  yyprintf((stderr, "do yy_2_func\n"));
   e && SADD(e); ;
#undef e
#undef args
}
YY_ACTION(void) yy_1_func(char *yytext, int yyleng)
{
#define e yyval[-1]
#define args yyval[-2]
  yyprintf((stderr, "do yy_1_func\n"));
   SPUSH(); ;
#undef e
#undef args
}
YY_ACTION(void) yy_3_ecall(char *yytext, int yyleng)
{
#define arg yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_3_ecall\n"));
   yy = P_NEW2("call", name, SPOP()); ;
#undef arg
#undef name
}
YY_ACTION(void) yy_2_ecall(char *yytext, int yyleng)
{
#define arg yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_2_ecall\n"));
   SADD(arg); ;
#undef arg
#undef name
}
YY_ACTION(void) yy_1_ecall(char *yytext, int yyleng)
{
#define arg yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_1_ecall\n"));
   SPUSH(); ;
#undef arg
#undef name
}
YY_ACTION(void) yy_3_icall(char *yytext, int yyleng)
{
#define arg yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_3_icall\n"));
   yy = P_NEW2("call", name, SPOP()); ;
#undef arg
#undef name
}
YY_ACTION(void) yy_2_icall(char *yytext, int yyleng)
{
#define arg yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_2_icall\n"));
   SADD(arg); ;
#undef arg
#undef name
}
YY_ACTION(void) yy_1_icall(char *yytext, int yyleng)
{
#define arg yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_1_icall\n"));
   SPUSH(); ;
#undef arg
#undef name
}
YY_ACTION(void) yy_1_assign(char *yytext, int yyleng)
{
#define val yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_1_assign\n"));
   yy = P_NEW2("assign", name, val); ;
#undef val
#undef name
}
YY_ACTION(void) yy_1_bad(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_bad\n"));
   P_ADD(P_NEW("syntax_error", rb_str_new(yytext, yyleng))); ;
}
YY_ACTION(void) yy_1_body(char *yytext, int yyleng)
{
#define e yyval[-1]
  yyprintf((stderr, "do yy_1_body\n"));
   e && P_ADD(e); ;
#undef e
}

YY_RULE(int) yy_digit()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "digit"));  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;
  yyprintf((stderr, "  ok   %s @ %s\n", "digit", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "digit", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_esc()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "esc"));  if (!yymatchChar('\\')) goto l2;  if (!yymatchDot()) goto l2;
  yyprintf((stderr, "  ok   %s @ %s\n", "esc", yybuf+yypos));
  return 1;
  l2:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "esc", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_nsq()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "nsq"));
  {  int yypos4= yypos, yythunkpos4= yythunkpos;  if (!yy_sq()) goto l4;  goto l3;
  l4:;	  yypos= yypos4; yythunkpos= yythunkpos4;
  }  if (!yymatchDot()) goto l3;
  yyprintf((stderr, "  ok   %s @ %s\n", "nsq", yybuf+yypos));
  return 1;
  l3:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "nsq", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_ndq()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "ndq"));
  {  int yypos6= yypos, yythunkpos6= yythunkpos;  if (!yy_dq()) goto l6;  goto l5;
  l6:;	  yypos= yypos6; yythunkpos= yythunkpos6;
  }  if (!yymatchDot()) goto l5;
  yyprintf((stderr, "  ok   %s @ %s\n", "ndq", yybuf+yypos));
  return 1;
  l5:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ndq", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_sq()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "sq"));  if (!yymatchChar('\'')) goto l7;
  yyprintf((stderr, "  ok   %s @ %s\n", "sq", yybuf+yypos));
  return 1;
  l7:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "sq", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_dq()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "dq"));  if (!yymatchChar('\"')) goto l8;
  yyprintf((stderr, "  ok   %s @ %s\n", "dq", yybuf+yypos));
  return 1;
  l8:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "dq", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_rangeop()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "rangeop"));
  {  int yypos10= yypos, yythunkpos10= yythunkpos;  if (!yy_var()) goto l11;  goto l10;
  l11:;	  yypos= yypos10; yythunkpos= yythunkpos10;  if (!yy_integer()) goto l12;  goto l10;
  l12:;	  yypos= yypos10; yythunkpos= yythunkpos10;  if (!yy_eop()) goto l13;  goto l10;
  l13:;	  yypos= yypos10; yythunkpos= yythunkpos10;  if (!yy_ecall()) goto l9;
  }
  l10:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "rangeop", yybuf+yypos));
  return 1;
  l9:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "rangeop", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_integer()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "integer"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l14;  if (!yy_digit()) goto l14;
  l15:;	
  {  int yypos16= yypos, yythunkpos16= yythunkpos;  if (!yy_digit()) goto l16;  goto l15;
  l16:;	  yypos= yypos16; yythunkpos= yythunkpos16;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l14;  yyDo(yy_1_integer, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "integer", yybuf+yypos));
  return 1;
  l14:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "integer", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_range()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "range"));  if (!yy_rangeop()) goto l17;  yyDo(yySet, -2, 0);  if (!yymatchString("..")) goto l17;  if (!yy_rangeop()) goto l17;  yyDo(yySet, -1, 0);  yyDo(yy_1_range, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "range", yybuf+yypos));  yyDo(yyPop, 2, 0);
  return 1;
  l17:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "range", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_string()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "string"));
  {  int yypos19= yypos, yythunkpos19= yythunkpos;  if (!yy_dq()) goto l20;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l20;
  l21:;	
  {  int yypos22= yypos, yythunkpos22= yythunkpos;
  {  int yypos23= yypos, yythunkpos23= yythunkpos;  if (!yy_esc()) goto l24;  goto l23;
  l24:;	  yypos= yypos23; yythunkpos= yythunkpos23;  if (!yy_ndq()) goto l22;
  }
  l23:;	  goto l21;
  l22:;	  yypos= yypos22; yythunkpos= yythunkpos22;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l20;  if (!yy_dq()) goto l20;  yyDo(yy_1_string, yybegin, yyend);  goto l19;
  l20:;	  yypos= yypos19; yythunkpos= yythunkpos19;  if (!yy_sq()) goto l18;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l18;
  l25:;	
  {  int yypos26= yypos, yythunkpos26= yythunkpos;
  {  int yypos27= yypos, yythunkpos27= yythunkpos;  if (!yy_esc()) goto l28;  goto l27;
  l28:;	  yypos= yypos27; yythunkpos= yythunkpos27;  if (!yy_nsq()) goto l26;
  }
  l27:;	  goto l25;
  l26:;	  yypos= yypos26; yythunkpos= yythunkpos26;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l18;  if (!yy_sq()) goto l18;  yyDo(yy_2_string, yybegin, yyend);
  }
  l19:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "string", yybuf+yypos));
  return 1;
  l18:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "string", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_var()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "var"));  if (!yy_identifier()) goto l29;  yyDo(yySet, -1, 0);  yyDo(yy_1_var, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "var", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l29:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "var", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_operand()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "operand"));
  {  int yypos31= yypos, yythunkpos31= yythunkpos;  if (!yy_list()) goto l32;  goto l31;
  l32:;	  yypos= yypos31; yythunkpos= yythunkpos31;  if (!yy_atom()) goto l33;  goto l31;
  l33:;	  yypos= yypos31; yythunkpos= yythunkpos31;  if (!yy_eop()) goto l34;  goto l31;
  l34:;	  yypos= yypos31; yythunkpos= yythunkpos31;  if (!yy_ecall()) goto l30;
  }
  l31:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "operand", yybuf+yypos));
  return 1;
  l30:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "operand", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_func_args()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "func_args"));
  {  int yypos36= yypos, yythunkpos36= yythunkpos;  if (!yymatchChar('[')) goto l37;  yyDo(yy_1_func_args, yybegin, yyend);
  l40:;	
  {  int yypos41= yypos, yythunkpos41= yythunkpos;  if (!yy__()) goto l41;  goto l40;
  l41:;	  yypos= yypos41; yythunkpos= yythunkpos41;
  }  if (!yy_identifier()) goto l37;  yyDo(yySet, -1, 0);  yyDo(yy_2_func_args, yybegin, yyend);
  l38:;	
  {  int yypos39= yypos, yythunkpos39= yythunkpos;
  l42:;	
  {  int yypos43= yypos, yythunkpos43= yythunkpos;  if (!yy__()) goto l43;  goto l42;
  l43:;	  yypos= yypos43; yythunkpos= yythunkpos43;
  }  if (!yy_identifier()) goto l39;  yyDo(yySet, -1, 0);  yyDo(yy_2_func_args, yybegin, yyend);  goto l38;
  l39:;	  yypos= yypos39; yythunkpos= yythunkpos39;
  }
  l44:;	
  {  int yypos45= yypos, yythunkpos45= yythunkpos;  if (!yy__()) goto l45;  goto l44;
  l45:;	  yypos= yypos45; yythunkpos= yythunkpos45;
  }  if (!yymatchChar(']')) goto l37;
  l46:;	
  {  int yypos47= yypos, yythunkpos47= yythunkpos;  if (!yy__()) goto l47;  goto l46;
  l47:;	  yypos= yypos47; yythunkpos= yythunkpos47;
  }  yyDo(yy_3_func_args, yybegin, yyend);  goto l36;
